# dull

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
dull/: __init__.py  _src.py
tests/: test_dull.py
